@@ -305,11 +305,6 @@ static void add_dict (cff_dict *dict,
   if (dict_operator[id].opname == NULL || argtype < 0) {
     *status = CFF_ERROR_PARSE_ERROR;
     return;
-#ifndef XETEX
-  } else if (stack_top < 1) {
-    *status = CFF_ERROR_STACK_UNDERFLOW;
-    return;
-#endif
   }
 
   if (dict->count >= dict->max) {
@@ -323,24 +318,20 @@ static void add_dict (cff_dict *dict,
       argtype == CFF_TYPE_BOOLEAN ||
       argtype == CFF_TYPE_SID ||
       argtype == CFF_TYPE_OFFSET) {
-#ifdef XETEX
     /* check for underflow here, as exactly one operand is expected */
     if (stack_top < 1) {
       *status = CFF_ERROR_STACK_UNDERFLOW;
       return;
     }
-#endif
     stack_top--;
     (dict->entries)[dict->count].count  = 1;
     (dict->entries)[dict->count].values = NEW(1, double);
     (dict->entries)[dict->count].values[0] = arg_stack[stack_top];
     dict->count += 1;
   } else {
-#ifdef XETEX
     /* just ignore operator if there were no operands provided;
        don't treat this as underflow (e.g. StemSnapV in TemporaLGCUni-Italic.otf) */
     if (stack_top > 0)
-#endif
     {
       (dict->entries)[dict->count].count  = stack_top;
       (dict->entries)[dict->count].values = NEW(stack_top, double);
